--- a/admin_settings.html
+++ b/admin_settings.html
@@ -128,7 +128,7 @@
                     <svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16.875 13.75C16.875 13.75 18 13.75 18 12.625C18 11.5 16.875 8.125 12.375 8.125C7.875 8.125 6.75 11.5 6.75 12.625C6.75 13.75 7.875 13.75 7.875 13.75H16.875ZM7.89975 12.625C7.89144 12.6239 7.88318 12.6224 7.875 12.6205C7.87612 12.3235 8.06287 11.4618 8.73 10.6855C9.351 9.95763 10.4423 9.25 12.375 9.25C14.3066 9.25 15.3979 9.95875 16.02 10.6855C16.6871 11.4618 16.8727 12.3246 16.875 12.6205L16.866 12.6228C16.8608 12.6236 16.8555 12.6244 16.8503 12.625H7.89975ZM12.375 5.875C12.9717 5.875 13.544 5.63795 13.966 5.21599C14.3879 4.79403 14.625 4.22174 14.625 3.625C14.625 3.02826 14.3879 2.45597 13.966 2.03401C13.544 1.61205 12.9717 1.375 12.375 1.375C11.7783 1.375 11.206 1.61205 10.784 2.03401C10.3621 2.45597 10.125 3.02826 10.125 3.625C10.125 4.22174 10.3621 4.79403 10.784 5.21599C11.206 5.63795 11.7783 5.875 12.375 5.875ZM15.75 3.625C15.75 4.06821 15.6627 4.50708 15.4931 4.91656C15.3235 5.32603 15.0749 5.69809 14.7615 6.01149C14.4481 6.32488 14.076 6.57348 13.6666 6.74309C13.2571 6.9127 12.8182 7 12.375 7C11.9318 7 11.4929 6.9127 11.0834 6.74309C10.674 6.57348 10.3019 6.32488 9.98851 6.01149C9.67512 5.69809 9.42652 5.32603 9.25691 4.91656C9.0873 4.50708 9 4.06821 9 3.625C9 2.72989 9.35558 1.87145 9.98851 1.23851C10.6214 0.605579 11.4799 0.25 12.375 0.25C13.2701 0.25 14.1286 0.605579 14.7615 1.23851C15.3944 1.87145 15.75 2.72989 15.75 3.625ZM7.803 8.44C7.35298 8.29829 6.88909 8.20514 6.41925 8.16213C6.15525 8.13702 5.89019 8.12463 5.625 8.125C1.125 8.125 0 11.5 0 12.625C0 13.3754 0.374625 13.75 1.125 13.75H5.868C5.70122 13.3988 5.61805 13.0137 5.625 12.625C5.625 11.4888 6.04913 10.3277 6.85125 9.358C7.12463 9.02725 7.443 8.71787 7.803 8.44ZM5.535 9.25C4.86917 10.2504 4.5095 11.4233 4.5 12.625H1.125C1.125 12.3325 1.3095 11.4663 1.98 10.6855C2.59313 9.97 3.6585 9.2725 5.535 9.25113V9.25ZM1.6875 4.1875C1.6875 3.29239 2.04308 2.43395 2.67601 1.80101C3.30895 1.16808 4.16739 0.8125 5.0625 0.8125C5.95761 0.8125 6.81605 1.16808 7.44899 1.80101C8.08192 2.43395 8.4375 3.29239 8.4375 4.1875C8.4375 5.08261 8.08192 5.94105 7.44899 6.57399C6.81605 7.20692 5.95761 7.5625 5.0625 7.5625C4.16739 7.5625 3.30895 7.20692 2.67601 6.57399C2.04308 5.94105 1.6875 5.08261 1.6875 4.1875ZM5.0625 1.9375C4.46576 1.9375 3.89347 2.17455 3.47151 2.59651C3.04955 3.01847 2.8125 3.59076 2.8125 4.1875C2.8125 4.78424 3.04955 5.35653 3.47151 5.77849C3.89347 6.20045 4.46576 6.4375 5.0625 6.4375C5.65924 6.4375 6.23153 6.20045 6.65349 5.77849C7.07545 5.35653 7.3125 4.78424 7.3125 4.1875C7.3125 3.59076 7.07545 3.01847 6.65349 2.59651C6.23153 2.17455 5.65924 1.9375 5.0625 1.9375Z" fill="#4D4D4D"/>
                         </svg>
-                    <span id="sidebarlink" style="color: #858796;">Managa Users</span></a>
+                    <span id="sidebarlink" style="color: #858796;">Manage Users</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="meetings.html">
@@ -198,16 +198,8 @@
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i> Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i> Activity Log
-                                </a>
-                                <div class="dropdown-divider"></div>
+
+
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                                 </a>
@@ -980,11 +972,11 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Category name</label>
                                         <input class="form-control" type="text" placeholder="Type here">
                                     </div>
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Priority</label>
                                         <select name="day" class="form-control select-dropdown-icon">
                                         <option>Select</option>
@@ -992,7 +984,7 @@
                                         <option value="02">Weekend</option>
                                     </select>
                                     </div>
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Bot</label>
                                         <select name="day" class="form-control select-dropdown-icon">
                                         <option>Select</option>
@@ -1019,11 +1011,11 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Category name</label>
                                         <input class="form-control" type="text" placeholder="Type here">
                                     </div>
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Priority</label>
                                         <select name="day" class="form-control select-dropdown-icon">
                                         <option>Select</option>
@@ -1031,7 +1023,7 @@
                                         <option value="02">Weekend</option>
                                     </select>
                                     </div>
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Bot</label>
                                         <select name="day" class="form-control select-dropdown-icon">
                                         <option>Select</option>
@@ -1058,7 +1050,7 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <p style="font-weight: 500; font-size: 13px; color: #4D4D4D;"> Are you sure you want to delete this category?</p>
                                     </div>
 
@@ -1084,11 +1076,11 @@
                             <div class="modal-body">
                                 <div class="row">
 
-                                    <div class="col-6 mb-4">
+                                    <div class="col-6 mb-2">
                                         <label>Keyword</label>
                                         <input class="form-control" type="text" placeholder="Enter Keyword">
                                     </div>
-                                    <div class="col-6 mb-4">
+                                    <div class="col-6 mb-2">
                                         <label>Canned response</label>
                                         <input class="form-control" type="text" placeholder="Enter canned response">
                                     </div>
@@ -1115,11 +1107,11 @@
                             <div class="modal-body">
                                 <div class="row">
 
-                                    <div class="col-6 mb-4">
+                                    <div class="col-6 mb-2">
                                         <label>Keyword</label>
                                         <input class="form-control" type="text" placeholder="Enter Keyword">
                                     </div>
-                                    <div class="col-6 mb-4">
+                                    <div class="col-6 mb-2">
                                         <label>Canned response</label>
                                         <input class="form-control" type="text" placeholder="Enter canned response">
                                     </div>
@@ -1145,7 +1137,7 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <p style="font-weight: 500; font-size: 13px; color: #4D4D4D;"> Are you sure you want to delete this canned response?</p>
                                     </div>
 
@@ -1194,7 +1186,7 @@
                             <div class="modal-body">
                                 <div class="row">
 
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Keyword</label>
                                         <input class="form-control" type="text" placeholder="Enter Keyword">
                                     </div>
@@ -1218,7 +1210,7 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <p style="font-weight: 500; font-size: 13px; color: #4D4D4D;"> Are you sure you want to delete this Blacklisted Keyword?</p>
                                     </div>
 
@@ -1242,7 +1234,7 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Days</label>
                                         <select name="day" class="form-control select-dropdown-icon">
                                             <option>Select</option>
@@ -1250,11 +1242,11 @@
                                             <option value="02">Weekend</option>
                                         </select>
                                     </div>
-                                    <div class="col-6 mb-4">
+                                    <div class="col-6 mb-2">
                                         <label>Start Time</label>
                                         <input class="form-control " type="time" placeholder="Type Here">
                                     </div>
-                                    <div class="col-6 mb-4">
+                                    <div class="col-6 mb-2">
                                         <label>End Time</label>
                                         <input class="form-control" type="time" placeholder="Type Here">
                                     </div>
@@ -1342,15 +1334,19 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Holiday</label>
-                                        <input class="form-control" type="text" placeholder="Select Date">
+                                        <select name="day" class="form-control select-dropdown-icon">
+                                            <option>Select date</option>
+                                            <option value="01">Weakdays</option>
+                                            <option value="02">Weekend</option>
+                                        </select>
                                     </div>
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Description</label>
                                         <input class="form-control" type="text" placeholder="Type Here">
                                     </div>
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Auto Response</label>
                                         <input class="form-control" type="text" placeholder="Type Here">
                                     </div>
@@ -1377,7 +1373,7 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Days</label>
                                         <select name="day" class="form-control select-dropdown-icon">
                                             <option>Select</option>
@@ -1385,7 +1381,7 @@
                                             <option value="02">Weekend</option>
                                         </select>
                                     </div>
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Month</label>
                                         <select name="month" class="form-control select-dropdown-icon">
                                             <option>Select</option>
@@ -1403,7 +1399,7 @@
                                             <option value="12">December</option>
                                         </select>
                                     </div>
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Year</label>
                                         <select name="year" class="form-control select-dropdown-icon">
                                             <option>Select</option>
@@ -1455,7 +1451,7 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <p style="font-weight: 500; font-size: 13px; color: #4D4D4D;"> Are you sure you want to delete this calendar event?</p>
                                     </div>
 
@@ -1478,7 +1474,7 @@
                             </div>
                             <div class="modal-body">
                                 <div class="row">
-                                    <div class="col-12 mb-4">
+                                    <div class="col-12 mb-2">
                                         <label>Days</label>
                                         <select name="day" class="form-control select-dropdown-icon">
                                             
@@ -1487,19 +1483,19 @@
                                         </select>
                                     </div>
 
-                                    <div class="col-6 mb-4">
+                                    <div class="col-6 mb-2">
                                         <label>Start Time</label>
                                         <input class="form-control " type="time" placeholder="Type Here">
                                     </div>
-                                    <div class="col-6 mb-4">
+                                    <div class="col-6 mb-2">
                                         <label>End Time</label>
                                         <input class="form-control" type="time" placeholder="Type Here">
                                     </div>
-                                    <div class="col-12 mb-4 holidays-content ">
+                                    <div class="col-12 mb-2 holidays-content ">
                                         <label>Description</label>
                                         <input class="form-control" type="text " placeholder="Type Here ">
                                     </div>
-                                    <div class="col-12 mb-4 holidays-content ">
+                                    <div class="col-12 mb-2 holidays-content ">
                                         <label>Auto Response</label>
                                         <input class="form-control " type="text " placeholder="Type Here ">
                                     </div>
