--- a/archives.html
+++ b/archives.html
@@ -30,49 +30,6 @@
     <!-- Page Wrapper -->
     <div id="wrapper">
 
-        <!-- Agent Offline Reason Popup Model -->
-        <div class="agent-offline-status-model" id="offlineReasonModal">
-
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 form-popup">
-                <form action="#" class="form-container">
-                    <div class="row">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 agent-offline-status-popup-heading">
-                            <h6>Set Offline</h6>
-
-
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <label>Please provide a suitable reason</label>
-                            <select>
-                              <option>Select </option>
-                              <option>lorem ipsum</option>
-                              <option>lorem ipsum</option>
-                              <option>lorem ipsum</option>
-                              <option>lorem ipsum</option>
-                            </select>
-
-                        </div>
-
-
-                    </div>
-
-                    <div class="row">
-                        <div class="col-12" style="text-align: right; margin-top: 64px;">
-                            <button class="cancelBtn">Cancel</button>
-                            <button class="submitBtn">Submit</button>
-
-
-                        </div>
-                    </div>
-
-
-
-
-                </form>
-            </div>
-        </div>
 
 
 
@@ -133,7 +90,7 @@
             </li>
             <li id="navitemtoggle" class="nav-item">
                 <div class="custom-control custom-switch nav-link">
-                    <input type="checkbox" class="custom-control-input" id="customSwitch2" onclick="agentOfflineFunction()" checked>
+                    <input type="checkbox" class="custom-control-input" id="customSwitch2" data-toggle="modal" data-target="#agent-offline-reason-modal" onclick="agentOfflineFunction()" checked>
                     <label class="custom-control-label" for="customSwitch2" style="margin-left: 44px;"></label>
                     <span class="space-right" id="agentOnlineText">Online</span>
                     <span class="space-right" id="agentOfflineText" style="display: none;">Offline</span>
@@ -175,16 +132,7 @@
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i> Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i> Activity Log
-                                </a>
-                                <div class="dropdown-divider"></div>
+
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                                 </a>
@@ -262,7 +210,22 @@
                                             <td role="cell">01:10:40</td>
 
                                             <td role="cell">
-                                                <button>
+                                                <button data-toggle="modal" data-target="#admin-chat-history-Modal">
+                                                    <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg" >
+                                                    History</button>
+                                            </td>
+
+
+
+                                        </tr>
+                                        <tr role="row">
+                                            <td role="cell">Shubham.Sethia</td>
+                                            <td role="cell">N/A</td>
+                                            <td role="cell">16/12/20</td>
+                                            <td role="cell">01:10:40</td>
+
+                                            <td role="cell">
+                                                <button data-toggle="modal" data-target="#admin-chat-history-Modal">
                                                     <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg">
                                                     History</button>
                                             </td>
@@ -277,22 +240,7 @@
                                             <td role="cell">01:10:40</td>
 
                                             <td role="cell">
-                                                <button>
-                                                    <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg">
-                                                    History</button>
-                                            </td>
-
-
-
-                                        </tr>
-                                        <tr role="row">
-                                            <td role="cell">Shubham.Sethia</td>
-                                            <td role="cell">N/A</td>
-                                            <td role="cell">16/12/20</td>
-                                            <td role="cell">01:10:40</td>
-
-                                            <td role="cell">
-                                                <button>
+                                                <button data-toggle="modal" data-target="#admin-chat-history-Modal">
                                                     <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg">
                                                     History</button>
                                             </td>
@@ -329,6 +277,129 @@
                         </div>
 
 
+                    </div>
+                    <div class="modal fade" id="agent-offline-reason-modal" tabindex="-1" role="dialog" aria-labelledby="agent_offline_reason_modal_label" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h6>Set Offline</h6>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+
+                                        <div class="col-12 mb-2">
+                                            <label>Please provide a suitable reason</label>
+                                            <select name="day" class="form-control select-dropdown-icon">
+                                                <option>Select</option>
+                                                <option value="01">lorem ipsum</option>
+                                                <option value="02">lorem ipsum</option>
+                                            </select>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <div style="float: right;">
+                                        <button class="btn-close" type="button" data-dismiss="modal">Cancel</button>
+                                        <button class="btn-primary" type="button">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade" id="admin-chat-history-Modal" tabindex="-1" role="dialog" aria-labelledby="Admin_chat_history_modal_label" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content" style="height: 425px; overflow: hidden;">
+                                <div class="modal-header">
+                                    <h6>Chat History</h6>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <div class="col-12 mb-2">
+                                            <div class="live-chat-area-admin">
+
+                                                <div class="live-chat-message-wrapper">
+                                                    <div class="live-chat-client-message-wrapper">
+                                                        <div class="live-chat-client-image">S</div>
+                                                        <div class="live-chat-client-message-bubble">
+                                                            Lorem ipsum dolor, sit amet consectetur
+                                                        </div>
+                                                        <div class="live-chat-client-message-time">4:30 PM . 21/1/202</div>
+                                                    </div>
+                                                    <div class="live-chat-agent-message-wrapper">
+                                                        <div class="live-chat-agent-image">A</div>
+                                                        <div class="live-chat-agent-message-bubble">
+                                                            Lorem ipsum dolor, sit amet consectetur
+                                                        </div>
+                                                        <div class="live-chat-agent-message-time">
+                                                            4:30 PM . 21/1/2020
+
+                                                        </div>
+                                                    </div>
+                                                    <div class="live-chat-client-message-wrapper">
+                                                        <div class="live-chat-client-image">S</div>
+                                                        <div class="live-chat-client-message-bubble">
+                                                            Lorem ipsum dolor, sit amet consectetur
+                                                        </div>
+                                                        <div class="live-chat-client-message-time">4:30 PM . 21/1/2020</div>
+                                                    </div>
+                                                    <div class="live-chat-agent-message-wrapper">
+                                                        <div class="live-chat-agent-image">A</div>
+                                                        <div class="live-chat-agent-message-bubble">
+                                                            Lorem ipsum dolor, sit amet consectetur
+                                                        </div>
+                                                        <div class="live-chat-agent-message-time">
+                                                            4:30 PM . 21/1/2020
+
+                                                        </div>
+                                                    </div>
+                                                    <div class="live-chat-agent-message-wrapper">
+                                                        <div class="live-chat-agent-image">A</div>
+                                                        <div class="live-chat-agent-message-bubble">
+                                                            Lorem ipsum dolor, sit amet consectetur
+                                                        </div>
+                                                        <div class="live-chat-agent-message-time">
+                                                            4:30 PM . 21/1/2020
+
+                                                        </div>
+                                                    </div>
+                                                    <div class="live-chat-client-message-wrapper">
+                                                        <div class="live-chat-client-image">S</div>
+                                                        <div class="live-chat-client-message-bubble">
+                                                            Lorem ipsum dolor, sit amet consectetur
+                                                        </div>
+                                                        <div class="live-chat-client-message-time">4:30 PM . 21/1/2020</div>
+                                                    </div>
+                                                    <div class="live-chat-client-message-wrapper">
+                                                        <div class="live-chat-client-image">S</div>
+                                                        <div class="live-chat-client-message-bubble">
+                                                            Lorem ipsum dolor, sit amet consectetur
+                                                        </div>
+                                                        <div class="live-chat-client-message-time">4:30 PM . 21/1/2020</div>
+                                                    </div>
+                                                </div>
+                                                <div class="live-chat-text-box-wrapper-admin">
+                                                    <button class="cancelBtn">Cancel </button>
+                                                    <button class="downloadBtn">Download </button>
+
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+
+
+                                    <div style="float: right;">
+                                        <button class="btn-close" type="button" data-dismiss="modal">Cancel</button>
+                                        <button class="btn-primary" type="button">Export</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
