--- a/meetings.html
+++ b/meetings.html
@@ -119,7 +119,7 @@
             </li>
             <li id="navitemtoggle" class="nav-item">
                 <div class="custom-control custom-switch nav-link">
-                    <input type="checkbox" class="custom-control-input" id="customSwitch2" onclick="agentOfflineFunction()" checked>
+                    <input type="checkbox" class="custom-control-input" id="customSwitch2" data-toggle="modal" data-target="#agent-offline-reason-modal" onclick="agentOfflineFunction()" checked>
                     <label class="custom-control-label" for="customSwitch2" style="margin-left: 44px;"></label>
                     <span class="space-right" id="agentOnlineText">Online</span>
                     <span class="space-right" id="agentOfflineText" style="display: none;">Offline</span>
@@ -161,16 +161,7 @@
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i> Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i> Activity Log
-                                </a>
-                                <div class="dropdown-divider"></div>
+
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                                 </a>
@@ -184,6 +175,35 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
+                    <div class="modal fade" id="agent-offline-reason-modal" tabindex="-1" role="dialog" aria-labelledby="agent_offline_reason_modal_label" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h6>Set Offline</h6>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+
+                                        <div class="col-12 mb-2">
+                                            <label>Please provide a suitable reason</label>
+                                            <select name="day" class="form-control select-dropdown-icon">
+                                                <option>Select</option>
+                                                <option value="01">lorem ipsum</option>
+                                                <option value="02">lorem ipsum</option>
+                                            </select>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <div style="float: right;">
+                                        <button class="btn-close" type="button" data-dismiss="modal">Cancel</button>
+                                        <button class="btn-primary" type="button">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
                 <!-- /.container-fluid -->
