--- a/settings.html
+++ b/settings.html
@@ -31,91 +31,7 @@
     <div id="wrapper">
 
 
-        <!-- Canned Response modal -->
-        <div class="canned-response-model" id="myModel">
 
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 form-popup">
-                <form action="#" class="form-container">
-                    <div class="row">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 canned-response-popup-content">
-                            <h6>Add Canned Response</h6>
-
-
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <label>Keyword</label>
-                            <input type="text" placeholder="Enter Keyword">
-
-                        </div>
-                        <div class="col-6">
-                            <label>Canned Response</label>
-                            <input type="text" placeholder="Enter Canned Response">
-
-                        </div>
-                    </div>
-                    <div class="row">
-                        <p>Visibilty: Public</p>
-                    </div>
-                    <div class="row">
-                        <div class="col-12" style="text-align: right; margin-top: 55px;">
-                            <button class="cancelBtn">Cancel</button>
-                            <button class="addBtn">Add</button>
-
-                        </div>
-                    </div>
-
-
-
-
-                </form>
-            </div>
-        </div>
-
-        <!-- Agent Offline Reason Popup Model -->
-        <div class="agent-offline-status-model" id="offlineReasonModal">
-
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 form-popup">
-                <form action="#" class="form-container">
-                    <div class="row">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 agent-offline-status-popup-heading">
-                            <h6>Set Offline</h6>
-
-
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <label>Please provide a suitable reason</label>
-                            <select>
-                              <option>Select </option>
-                              <option>lorem ipsum</option>
-                              <option>lorem ipsum</option>
-                              <option>lorem ipsum</option>
-                              <option>lorem ipsum</option>
-                            </select>
-
-                        </div>
-
-
-                    </div>
-
-                    <div class="row">
-                        <div class="col-12" style="text-align: right; margin-top: 64px;">
-                            <button class="cancelBtn">Cancel</button>
-                            <button class="submitBtn">Submit</button>
-
-
-                        </div>
-                    </div>
-
-
-
-
-                </form>
-            </div>
-        </div>
 
 
 
@@ -173,7 +89,7 @@
             </li>
             <li id="navitemtoggle" class="nav-item">
                 <div class="custom-control custom-switch nav-link">
-                    <input type="checkbox" class="custom-control-input" id="customSwitch2" onclick="agentOfflineFunction()" checked>
+                    <input type="checkbox" class="custom-control-input" id="customSwitch2" data-toggle="modal" data-target="#agent-offline-reason-modal" onclick="agentOfflineFunction()" checked>
                     <label class="custom-control-label" for="customSwitch2" style="margin-left: 44px;"></label>
                     <span class="space-right" id="agentOnlineText">Online</span>
                     <span class="space-right" id="agentOfflineText" style="display: none;">Offline</span>
@@ -215,16 +131,7 @@
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i> Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i> Activity Log
-                                </a>
-                                <div class="dropdown-divider"></div>
+
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Logout
                                 </a>
@@ -575,7 +482,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 live-chat-canned-response-popup">
-                                        <button class="open-button" id="myBtn">Add New</button>
+                                        <button class="open-button" data-toggle="modal" data-target="#agent-add-canned-response-Modal">Add New</button>
                                         <button class="delete-button" id="deleteBtn">Delete</button>
 
 
@@ -616,8 +523,8 @@
                                             <td role="cell">distracted </td>
                                             <td role="cell">Public</td>
                                             <td class="show-on-hover" role="cell">
-                                                <img style="padding-right: 15px;" src="./img/table-edit.svg">
-                                                <img src="./img/table-delete.svg">
+                                                <img style="padding-right: 15px;" src="./img/table-edit.svg" data-toggle="modal" data-target="#agent-edit-canned-response-Modal">
+                                                <img src="./img/table-delete.svg" data-toggle="modal" data-target="#agent-delete-canned-response-Modal">
                                             </td>
 
 
@@ -759,6 +666,121 @@
                         </div>
 
 
+                    </div>
+                    <div class="modal fade" id="agent-offline-reason-modal" tabindex="-1" role="dialog" aria-labelledby="agent_offline_reason_modal_label" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h6>Set Offline</h6>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+
+                                        <div class="col-12 mb-2">
+                                            <label>Please provide a suitable reason</label>
+                                            <select name="day" class="form-control select-dropdown-icon">
+                                                <option>Select</option>
+                                                <option value="01">lorem ipsum</option>
+                                                <option value="02">lorem ipsum</option>
+                                            </select>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <div style="float: right;">
+                                        <button class="btn-close" type="button" data-dismiss="modal">Cancel</button>
+                                        <button class="btn-primary" type="button">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal fade" id="agent-add-canned-response-Modal" tabindex="-1" role="dialog" aria-labelledby="agent_canned_response_modal_label" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h6>Add Canned Response</h6>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+
+                                        <div class="col-6 mb-2">
+                                            <label>Keyword</label>
+                                            <input class="form-control" type="text" placeholder="Enter Keyword">
+                                        </div>
+                                        <div class="col-6 mb-2">
+                                            <label>Canned response</label>
+                                            <input class="form-control" type="text" placeholder="Enter canned response">
+                                        </div>
+                                        <div class="col-12">
+                                            <p style="font-size: 12px;">Visibilty: Public</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <div style="float: right;">
+                                        <button class="btn-close" type="button" data-dismiss="modal">Cancel</button>
+                                        <button class="btn-primary" type="button">Add</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade" id="agent-edit-canned-response-Modal" tabindex="-1" role="dialog" aria-labelledby="agent_edit_canned_response_modal_label" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h6>Edit Canned Response</h6>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+
+                                        <div class="col-6 mb-2">
+                                            <label>Keyword</label>
+                                            <input class="form-control" type="text" placeholder="Enter Keyword">
+                                        </div>
+                                        <div class="col-6 mb-2">
+                                            <label>Canned response</label>
+                                            <input class="form-control" type="text" placeholder="Enter canned response">
+                                        </div>
+                                        <div class="col-12">
+                                            <p style="font-size: 12px;">Visibilty: Public</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <div style="float: right;">
+                                        <button class="btn-close" type="button" data-dismiss="modal">Cancel</button>
+                                        <button class="btn-primary" type="button">Save</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade" id="agent-delete-canned-response-Modal" tabindex="-1" role="dialog" aria-labelledby="admin_delete_canned_response_modal_label" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h6>Delete Canned Response</h6>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <div class="col-12 mb-2">
+                                            <p style="font-weight: 500; font-size: 13px; color: #4D4D4D;"> Are you sure you want to delete this canned response?</p>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <div style="float: right;">
+                                        <button class="btn-close" type="button" data-dismiss="modal">No</button>
+                                        <button class="btn-primary" type="button">Yes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
